Bug 1816593 - Fix wrong sized calendar-summary-dialog and customizeToolbar. r=aleca
Differential Revision: https://phabricator.services.mozilla.com/D169850

--HG--
extra : moz-landing-system : lando

--- a/calendar/base/themes/common/dialogs/calendar-summary-dialog.css
+++ b/calendar/base/themes/common/dialogs/calendar-summary-dialog.css
@@ -2,6 +2,10 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
+:root {
+  -moz-box-layout: legacy;
+}
+
 notification {
   border-inline-width: 1px;
 }
